Delete the Select compo from project & use imported compo from npm.

--- a/src/Styles/Home.module.css
+++ b/src/Styles/Home.module.css
@@ -21,3 +21,15 @@
     flex-direction: column;
     align-items: center;
 }
+
+.inputName {
+    margin: 15px 15px;
+}
+
+.submitForm {
+    margin: 15px 15px;
+}
+
+.employeeListPage {
+    margin: 15px 15px;
+}
